--- a/public/styles/foundation/_responsive.scss
+++ b/public/styles/foundation/_responsive.scss
@@ -1,14 +1,9 @@
 /* ----------------------- LOCAL CONSTANTS ----------------------------- */
 
-$DEVICE_WIDTHS:
-	(
-		smartPhoneOnly: 729px,
-
-		tabletMin: 730px,
-		tabletMax: 1023px,
-
-		desktopOnly: 1024px
-	);
+$smart-phone-only: 729px;
+$tablet-min: 730px;
+$tablet-max: 1023px;
+$desktop-only: 1024px;
 
 /* ----------------------- MIX-INS ----------------------------- */
 
@@ -18,10 +13,8 @@ $DEVICE_WIDTHS:
  *
  * @author kinsho
  */
-@mixin desktopOnly()
-{
-	@media only screen and (min-device-width: map-get($DEVICE_WIDTHS, desktopOnly))
-	{
+@mixin desktop-only() {
+	@media only screen and (min-device-width: $desktop-only) {
 		@content;
 	}
 }
@@ -32,10 +25,8 @@ $DEVICE_WIDTHS:
  *
  * @author kinsho
  */
-@mixin tabletUp()
-{
-	@media only screen and (min-device-width: map-get($DEVICE_WIDTHS, tabletMin))
-	{
+@mixin tablet-up() {
+	@media only screen and (min-device-width: $tablet-min) {
 		@content;
 	}
 }
@@ -46,10 +37,8 @@ $DEVICE_WIDTHS:
  *
  * @author kinsho
  */
-@mixin tabletOnly()
-{
-	@media only screen and (min-device-width: map-get($DEVICE_WIDTHS, tabletMin)) and (max-device-width: map-get($DEVICE_WIDTHS, tabletMax))
-	{
+@mixin tablet-only() {
+	@media only screen and (min-device-width: $tablet-min) and (max-device-width: $tablet-max) {
 		@content;
 	}
 }
@@ -60,10 +49,8 @@ $DEVICE_WIDTHS:
  *
  * @author kinsho
  */
-@mixin phoneOnly()
-{
-	@media only screen and (max-device-width: map-get($DEVICE_WIDTHS, smartPhoneOnly))
-	{
+@mixin phone-only() {
+	@media only screen and (max-device-width: $smart-phone-only) {
 		@content;
 	}
 }
@@ -74,10 +61,8 @@ $DEVICE_WIDTHS:
  *
  * @author kinsho
  */
-@mixin mobileOnly()
-{
-	@media only screen and (max-device-width: map-get($DEVICE_WIDTHS, tabletMax))
-	{
+@mixin mobile-only() {
+	@media only screen and (max-device-width: $tablet-max) {
 		@content;
 	}
 }
@@ -87,10 +72,8 @@ $DEVICE_WIDTHS:
  *
  * @author kinsho
  */
-@mixin landscapeOnly()
-{
-	@media only screen and (orientation: landscape)
-	{
+@mixin landscape-only() {
+	@media only screen and (orientation: landscape) {
 		@content;
 	}
 }
@@ -101,10 +84,8 @@ $DEVICE_WIDTHS:
  *
  * @author kinsho
  */
-@mixin portraitMobileOnly()
-{
-	@media only screen and (max-device-width: map-get($DEVICE_WIDTHS, tabletMax)) and (orientation: portrait)
-	{
+@mixin portrait-mbile-only() {
+	@media only screen and (max-device-width: $tablet-max) and (orientation: portrait) {
 		@content;
 	}
 }
@@ -115,23 +96,8 @@ $DEVICE_WIDTHS:
  *
  * @author kinsho
  */
-@mixin landscapeMobileOnly()
-{
-	@media only screen and (max-device-width: map-get($DEVICE_WIDTHS, tabletMax)) and (orientation: landscape)
-	{
-		@content;
-	}
-}
-
-/*
- * Mix-in is responsible for enforcing CSS stylings only on webkit browsers
- *
- * @author kinsho
- */
-@mixin webkitOnly()
-{
-	@media screen and (-webkit-min-device-pixel-ratio:0)
-	{
+@mixin landscape-mobile-only() {
+	@media only screen and (max-device-width: $tablet-max) and (orientation: landscape) {
 		@content;
 	}
 }
@@ -141,63 +107,8 @@ $DEVICE_WIDTHS:
  *
  * @author kinsho
  */
-@mixin printOnly()
-{
-	@media print
-	{
+@mixin print-only() {
+	@media print {
 		@content;
-	}
-}
-
-/*
- * Mix-in is responsible for enforcing CSS stylings in print and on devices that can (at minimum) support resolution
- * expected from a tablet environment
- */
-@mixin tabletUpAndPrint()
-{
-	@media only screen and (min-device-width: map-get($DEVICE_WIDTHS, tabletMin))
-	{
-		@content;
-	}
-
-	@media print
-	{
-		@content;
-	}
-}
-
-/* ----------------------- STYLES ----------------------------- */
-
-// Responsive Visibility Stylings
-
-.desktop_only
-{
-	@include mobileOnly()
-	{
-		display: none !important;
-	}
-}
-
-.mobile_only
-{
-	@include desktopOnly()
-	{
-		display: none !important;
-	}
-}
-
-.tablet_up_only
-{
-	@include phoneOnly()
-	{
-		display: none !important;
-	}
-}
-
-.phone_only
-{
-	@include tabletUp()
-	{
-		display: none !important;
 	}
 }
